--- a/src/components/Blogs.css
+++ b/src/components/Blogs.css
@@ -8,7 +8,7 @@
 }
 
 .blogs-section h2 {
-  font-size: 3.4rem;
+  font-size: 3rem;
   margin-bottom: 70px;
   color: #00bfff;
   font-weight: bold;
